--- a/game/csgo/addons/cs2surf/gamedata/cs2surf-core.games.jsonc
+++ b/game/csgo/addons/cs2surf/gamedata/cs2surf-core.games.jsonc
@@ -346,8 +346,8 @@
 		// "nokick" & "fill"
 		"CCSBotManager::MaintainBotQuota": {
 			"library": "server",
-			"windows": "40 53 48 81 EC 80 00 00 00 48 8B D9 FF 15 ? ? ? ? 45 33 C0",
-			"linux": "55 31 F6 48 89 E5 41 57 49 89 FF"
+			"windows": "40 55 41 56 48 8D 6C 24 ? 48 81 EC ? ? ? ? 4C 8B F1 FF 15",
+			"linux": "55 31 F6 48 89 E5 41 57 41 56 41 55 49 89 FD"
 		},
 		// "Could not add bot to the game: The game is full"
 		"CCSBotManager::BotAddCommand": {
