添加observer菜单 (不支持第三人称，几乎不可能做得出来)
commit dfc24cb62a8c0b84e9e33fdc6da93e56a497bd38
Author: Ciallo <dison2233@126.com>
Date:   Wed May 21 19:34:05 2025 +0800

    cleanup

commit ef2fce898cd787a1687074bacc5be326262d4962
Author: Ciallo <dison2233@126.com>
Date:   Wed May 21 19:28:27 2025 +0800

    Update memory.h

commit 743284e0297bb1cc664f05aa06915d05881205d7
Author: Ciallo <dison2233@126.com>
Date:   Wed May 21 19:00:18 2025 +0800

    第三人称观察时的实体坐标有很大的问题，摆了

commit ede6f36f775a3ca477c2272dddcaf813eb860b9f
Author: Ciallo <dison2233@126.com>
Date:   Mon May 19 20:14:39 2025 +0800

    回家再写

commit d4b08e70ae3b63c0f720e66ab949a20f39fa57fa
Author: Ciallo <dison2233@126.com>
Date:   Mon May 19 18:12:57 2025 +0800

    优化下以前写的屎

commit 6d11e8b35b28fbb85c88f2bdefbe83f2499343f2
Author: Ciallo <dison2233@126.com>
Date:   Mon May 19 18:05:47 2025 +0800

    OnClientConnected在换图时不会触发，换成OnClientPutInServer

commit dff0c801a6d719e5ad3ab3c3af30a8a6573b87ea
Author: Ciallo <dison2233@126.com>
Date:   Mon May 19 17:45:24 2025 +0800

    切换阵营时刷新状态

commit b23bf4d1f305d2ff86652cefab831cfeecdf9cc7
Author: Ciallo <dison2233@126.com>
Date:   Mon May 19 17:30:21 2025 +0800

    每次复活后得更新一下screentext的状态

commit 3e7cca0cdbbbfc675ef53ef9ba8ab3b7a3d30954
Author: Ciallo <dison2233@126.com>
Date:   Mon May 19 12:02:30 2025 +0800

    简化代码

commit 3ed78c3438a520de670e819b87bce9e7408b1089
Author: Ciallo <dison2233@126.com>
Date:   Mon May 19 11:52:48 2025 +0800

    adjust pos

commit 681c158dea8792bc1651b3ff3239ec53089c8e3b
Author: Nyano <dison2233@126.com>
Date:   Sun May 18 03:15:57 2025 +0800

    Update ccsplayerpawn.cpp

commit 1985693d22cf1820d8225457f3cc57540d4f058b
Author: Nyano <dison2233@126.com>
Date:   Sun May 18 03:08:40 2025 +0800

    找到了一种不依赖viewmodel也能强制每tick更新子实体物理运动的稳定不炸服方法

commit 635c2b17ef5901e7ee5c8937d3ac6ad6d8f25170
Author: Nyano <dison2233@126.com>
Date:   Sun May 18 01:52:39 2025 +0800

    Update mv_hooks.cpp

commit 2e8f4d7230ee8588d63ab7f3db66ee5e23b4e874
Author: Nya

--- a/game/csgo/addons/cs2surf/gamedata/cs2surf-core.games.jsonc
+++ b/game/csgo/addons/cs2surf/gamedata/cs2surf-core.games.jsonc
@@ -354,6 +354,12 @@
 			"library": "server",
 			"windows": "48 89 5C 24 ? 48 89 6C 24 ? 48 89 74 24 ? 57 41 54 41 55 41 56 41 57 48 83 EC ? 48 8B 05 ? ? ? ? 4D 8B F9",
 			"linux": "55 48 89 E5 41 57 41 89 CF 41 56 41 55 41 54 41 89 FC"
+		},
+		// CPlayer_ObserverServices vfunc 22/23 (win/linux)
+		"CPlayer_ObserverServices::SetObserverTarget": {
+			"library": "server",
+			"windows": "48 89 74 24 ? 55 41 56 41 57 48 8D AC 24 ? ? ? ? 48 81 EC ? ? ? ? 4C 8B FA",
+			"linux": "55 48 89 E5 41 55 49 89 FD 41 54 48 83 EC ? 48 85 F6 74 ? 48 8B 07"
 		}
 	}
 }
