修复linux编译失败，升级ubuntu和clang版本
commit c462cf34b886b38e38747186efde4c085abe7135
Author: Nyano <dison2233@126.com>
Date:   Mon May 26 21:07:51 2025 +0800

    Update sdkhook.cpp

commit f46b8da62e6874a0126cba0c3bce8e079a3fd7a7
Author: Nyano <dison2233@126.com>
Date:   Mon May 26 20:55:09 2025 +0800

    Update sdkhook.cpp

commit 4b12421f5013d347a70f831d126c87eec7e07cc3
Author: Nyano <dison2233@126.com>
Date:   Mon May 26 20:50:23 2025 +0800

    补下头文件试试

commit 8d6771d668d33a6a617d21c7623463c3ac529378
Author: Nyano <dison2233@126.com>
Date:   Mon May 26 20:40:23 2025 +0800

    Update build.yaml

commit 6bc0ff71f1af0040d3281de1bed32b894df5167b
Author: Nyano <dison2233@126.com>
Date:   Mon May 26 20:35:38 2025 +0800

    什么情况

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -50,7 +50,7 @@ jobs:
 
   build-linux:
     name: Linux
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
@@ -67,7 +67,7 @@ jobs:
 
       - name: Build with CMake
         run: |
-          cmake -G Ninja -B build -S . -DCMAKE_BUILD_TYPE=Release -DCMAKE_C_COMPILER="clang-15" -DCMAKE_CXX_COMPILER="clang++-15"
+          cmake -G Ninja -B build -S . -DCMAKE_BUILD_TYPE=Release -DCMAKE_C_COMPILER="clang" -DCMAKE_CXX_COMPILER="clang++"
           cmake --build build
 
       # - name: Archive build
