--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -46,7 +46,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: cs2surf-win
-          path: ./build/cs2surf.dll
+          path: ./build
 
   build-linux:
     name: Linux
@@ -74,4 +74,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: cs2surf-linux
-          path: ./build/cs2surf.so
+          path: ./build
